traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  def test():{
    var x=getX()
    var y=getY()
    //var haut=getMondeHauteur()
    //var larg=getMondeLargeur()
    if (x==6){
      return true
    }
    else{return false}
  }
  
  def deplacement(){
    var h=getMondeHauteur()
    var cpt=0
    ecritMessage(cpt)
    while (!test()){
    if (getY()==h){
      setPos(getX()+1,0)
    }
    else{
      setPos(getX(),getY()+1)
    }
      ecritMessage(cpt)
      cpt+=1
    
    }}
}